# PlantPal

./: .env.example  .gitignore  README.md  compose.yaml  docker-compose.yml
.github/workflows/: ci.yml
ai_service/: Dockerfile  main.py  requirements.txt
ai_service/tests/: test_advice.py
backend/: Dockerfile  README.md  pyproject.toml  seed.py
backend/app/: cache.py  config.py  main.py  models.py  rate_limit.py  security.py
backend/app/routers/: auth.py  care_events.py  plants.py
backend/app/services/: advice.py  care_events.py  plants.py
backend/tests/: conftest.py  test_all_endpoints.py  test_care_events.py  test_plants.py  test_security.py
docs/: EX3-notes.md  security-checklist.md
docs/runbooks/: compose.md
frontend/: Dockerfile  cached_api.py  care_log.py  plant_api.py  plantpal_ui.py  theme.css
frontend/tests/: test_frontend.py
scripts/: demo.sh  plantpal_cli.py  refresh.py
scripts/tests/: conftest.py  test_cli.py  test_refresh.py
